# MatcheteGravity

./: .gitignore  Changelog.md  Conventions.md  PacletInfo.wl  README.md  install.m  version
Documentation/: GroupMagic_Documentation.nb
Examples/: E_VLL_model.nb  Graviton.nb
Kernel/: init.m
Models/: E_VLL.m  S1S3LQs.m  SM.m  SMEFT.m  Singlet_Scalar_Extension.m  VLF_toy_model.m
Package/: Checks.m  CovariantDerivative.m  Definitions.m  DiracAlgebra.m  FunctionalTools.m  Indices.m  Matching.m  Simplifications.m  SuperTrace.m  TreeLevelMatching.m
Package/GroupMagic/: Groups.m
Package_deac/: CMakeLists.txt  Checks.m  CovariantDerivative.m  Definitions.m  FieldRedef.m  Indices.m  LoopIntegration.m  Matching.m  Printing.m  SuperTrace.m
Package_deac/GroupMagic/: CGManipulations.m  GroupMagic.m
Package_deac/GroupMagic/Kernel/: init.m
Tests/: CovariantDerivative.wl  Definitions.wl  DiracAlgebra.wl  GroupMagic.wl  LoopIntegration.wl  NCM.wl  RunTests.wls
Validation/: UpdateValidation.m  Validation.m
Validation/MatchingResults/previous/: E_VLL-EFT.m  S1S3LQs-EFT.m  Singlet_Scalar_Extension-EFT.m  VLF_toy_model-EFT.m
VanillaPackage/: Definitions.m  DiracAlgebra.m  FunctionalTools.m  Indices.m  Matchete.m  Matching.m  NCM.m  Printing.m  Simplifications.m
VanillaPackage/GroupMagic/: OtherDefinitions.m
